--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,20 +7,23 @@
     --color-wada-b: #2ca2db;
     --color-wada-c: #ef5323;
     --color-wada-d: #7fb842;
-    --font-custom: "Space Grotesk", sans-serif;
-    --font-custom-bold: "Bebas Neue", sans-serif;
-      
-    --font-sans: var(--font-space-grotesk), sans-serif;
+    --font-custom: 'Greycliff CF', sans-serif;
 }
 
-/*
-  The default border color has changed to `currentcolor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
+@font-face {
+  font-family: 'Greycliff CF';
+  src: url('/fonts/Fontspring-DEMO-greycliffcf-extrabold.otf') format('opentype');
+  font-weight: 800;
+  font-style: normal;
+}
 
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
+@font-face {
+  font-family: 'Greycliff CF';
+  src: url('/fonts/Fontspring-DEMO-greycliffcf-regular.otf') format('opentype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 @layer base {
   *,
   ::after,
