--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -36,8 +36,8 @@
 }
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #12263A;
+  --foreground: #ededed;
 }
 
 @media (prefers-color-scheme: dark) {
